# archcomp-tool

./: .gitignore  README.md  client.py  config.json  cron.sh  pyproject.toml  vocab.json
processing/: AbstractFuelControl_M1.slxc  Autotrans_shift.slxc  cars.slxc  narmamaglev_v1.slxc  verify.asv  verify.m
processing/FALS/: README.md
processing/FALS/chasing-cars/: run_cars.m
processing/FALS/f16-gcas/: AeroBenchSim_2019a.slxc
processing/FALS/neural/: run_neural.m
processing/FALS/powertrain/: run_powertrain.m
processing/FALS/steam-condenser/: run_steamcondenser.m
processing/FALS/transmission/: test_transmission.m
processing/slprj/_jitprj/: jitEngineAccessInfo.mat  s4Fu2jIO4VUUPlYoL8FdHqF.mat  sEwxHoqa8wlrghciKsdxEM.l  sEwxHoqa8wlrghciKsdxEM.mat  sMoV1rtjtxZEojzE65mdU1F.l  sMoV1rtjtxZEojzE65mdU1F.mat  sQFrJVbSFpbRKxhjrVthEWF.l  sQFrJVbSFpbRKxhjrVthEWF.mat  sch59UalUV5SvxgZMeTISDD.l  sch59UalUV5SvxgZMeTISDD.mat  shGzw5h9mXDwK1rnbPv6Y5.l  shGzw5h9mXDwK1rnbPv6Y5.mat
processing/slprj/_sfprj/Autotrans_shift/: amsi_serial.mat
processing/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  sEwxHoqa8wlrghciKsdxEM.mat  sMoV1rtjtxZEojzE65mdU1F.mat  sQFrJVbSFpbRKxhjrVthEWF.mat  sch59UalUV5SvxgZMeTISDD.mat  shGzw5h9mXDwK1rnbPv6Y5.mat
processing/slprj/_sfprj/cars/: amsi_serial.mat
processing/slprj/_sfprj/precompile/: 0Hl74v1ZhVnrO7PnjsBk6C.mat  autoInferAccessInfo.mat  biVP8j9UGEdjHNQCGK4zpC.mat
processing/validation/: Autotrans_shift.slxc  falstar-session.sh  falstar.sh  matlabconfig.m  models.cfg  test.cfg  validate-aristeo-demo.cfg
(+31 files in other folders)
